--- a/main.ipynb
+++ b/main.ipynb
@@ -2479,7 +2479,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "ba532deb-f9c2-4827-8346-166ea14bb5f0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2518,55 +2520,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe1a2cf3-87f5-4122-8dd4-313725992f2c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd26a3d9-96df-42af-b1b2-03f81bebee57",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "2d3485b7-a3ea-4522-b6ad-48acf7ed5f53",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9705011248588562"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xgb_total = (\n",
-    "    XGBRegressor(\n",
-    "        max_depth = 5, \n",
-    "        n_estimators = 200,\n",
-    "        random_state = 3870\n",
-    "    )\n",
-    "    .fit(x_train, y_train)\n",
-    ")\n",
-    "\n",
-    "# Calculating the R-squared using the test data\n",
-    "xgb_R2 = xgb_total.score(x_test, y_test)\n",
-    "\n",
-    "xgb_R2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "id": "827e9edd-f7e6-4c31-93bb-b54511425415",
    "metadata": {},
@@ -2583,16 +2536,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "0665a69c-5bf2-4dcd-8b49-120a12460dcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'KFold' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 5 fold cross-val\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m cv5 \u001b[38;5;241m=\u001b[39m KFold(n_splits \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m, shuffle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, random_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3870\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Defining the model:\u001b[39;00m\n\u001b[1;32m      5\u001b[0m xgb_reg \u001b[38;5;241m=\u001b[39m XGBClassifier(random_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3870\u001b[39m, early_stopping_rounds \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'KFold' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 5 fold cross-val\n",
     "cv5 = KFold(n_splits = 5, shuffle = True, random_state = 3870)\n",
     "\n",
     "# Defining the model:\n",
-    "xgb_reg = XGBRegressor(random_state = 3870, early_stopping_rounds = 50)\n",
+    "xgb_reg = XGBClassifier(random_state = 3870, early_stopping_rounds = 50)\n",
     "\n",
     "# Defining the grid search\n",
     "grid_search = GridSearchCV(\n",
