check if predictions match between ensemble methods

--- a/main.ipynb
+++ b/main.ipynb
@@ -2117,11 +2117,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "90f2c23e-e1a0-4e7f-bc7e-4ea5a07617a9",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Form the grid of values to choose hyperparameter values from \n",
@@ -3332,6 +3328,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8d5b59e1-0277-411c-9822-12da05a5f915",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All predictions match between random forest model and xgboost model\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if both ensemble methods provided the same predictions\n",
+    "predictions = y_pred == xgb_y_pred\n",
+    "\n",
+    "# Check for False values\n",
+    "has_false = not np.any(predictions) \n",
+    "if has_false:\n",
+    "    print('Not all preictions match between random forest model and xgboost model') \n",
+    "else: \n",
+    "    print('All predictions match between random forest model and xgboost model')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c3eb9b4c-6e3f-452b-99b1-38f144c3d9f9",
    "metadata": {},
@@ -3344,7 +3366,7 @@
    "id": "4fed9df1-d940-40f0-9fa6-da8d10c55d65",
    "metadata": {},
    "source": [
-    "Our project aims to explore if we can predict diabetes diagnoses with known health data, via multiple machine learnign models. We explored parametric and non parametric methods: logistic regression, Random Forests, and XGBoost. Useful factors from our data includes glucose levels, BMI, age, Diabetes Pedigree Function, and number of pregnancies. A sub-analysis identified a positive association between the number of pregnancies and diabetes diagnosis, as well as an inclusive finding that considering those who have never been pregnant or cannot become pregnant was still informative.\n",
+    "Our project aims to explore if we can predict diabetes diagnoses with known health data, via multiple machine learnign models. We explored parametric and non parametric methods: logistic regression, Random Forests, and XGBoost. Useful factors from our data includes glucose levels, BMI, age, diabetes pedigree function, insulin levels,  and number of pregnancies. A sub-analysis identified 2-hour serum insulin as \n",
     "\n",
     "The first modelling method used was logistic regression, a non-parametric method for binary, categorical outcome variables. This model showed decent accuracy, predicting correctly 77.3% of the time. However, upon further analysis, this model only correctly predicted those without diabetes, and had a high false negative rate of 47.4%. This model would miss almost half of diabetic patients, which could have severe consequences in a medical setting when early intervention, treatment, and diagnosis can impact a patient's wellbeing and quality of life. \n",
     "\n",
